파비콘 추가, 레이아웃 정리

--- a/web/index.html
+++ b/web/index.html
@@ -18,19 +18,27 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="광주광역시 서구 골목경제 119 상황판 - 서구지역 상인회 현황 및 통계 대시보드">
+  <meta name="keywords" content="광주광역시, 서구, 골목경제, 상인회, 대시보드, 통계">
+  <meta name="author" content="광주광역시 서구청">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="seogu119">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="서구 골목경제 119">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="shortcut icon" href="favicon.ico">
 
-  <title>seogu119</title>
-  <link rel="manifest" href="manifest.json">
+  <!-- Web App Manifest -->
+  <link rel="manifest" href="site.webmanifest">
+
+  <title>광주광역시 서구 골목경제 119 상황판</title>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
