타이젠 OS 지원

--- a/web/index.html
+++ b/web/index.html
@@ -22,6 +22,11 @@
   <meta name="keywords" content="광주광역시, 서구, 골목경제, 상인회, 대시보드, 통계">
   <meta name="author" content="광주광역시 서구청">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Tizen OS Compatibility -->
+  <meta name="tizen-app-id" content="seogu119.dashboard">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="msapplication-tap-highlight" content="no">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -41,6 +46,8 @@
   <title>광주광역시 서구 골목경제 119 상황판</title>
 </head>
 <body>
+  <!-- Tizen OS 최적화 스크립트 -->
+  <script src="tizen.js"></script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
