--- a/web/index.html
+++ b/web/index.html
@@ -42,6 +42,9 @@
 
   <!-- Web App Manifest -->
   <link rel="manifest" href="site.webmanifest">
+  
+  <!-- Font CSS for better Korean character support -->
+  <link rel="stylesheet" href="fonts.css">
 
   <title>광주광역시 서구 골목경제 119 상황판</title>
 </head>
