--- a/web/private.html
+++ b/web/private.html
@@ -42,7 +42,7 @@
 
     <div class="section">
         <h2>1. 개인정보의 처리목적</h2>
-        <p>본 서비스는 부산광역시 서구의 상권 정보를 제공하는 통계 대시보드로, 별도의 개인정보를 수집하거나 저장하지 않습니다.</p>
+        <p>본 서비스는 광주광역시 서구의 상권 정보를 제공하는 통계 대시보드로, 별도의 개인정보를 수집하거나 저장하지 않습니다.</p>
     </div>
 
     <div class="section">
